# opengl-cmake-base

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: shader.fs  shader.vs
game/: CMakeLists.txt
game/include/: main.hpp  shader.hpp
game/src/: main.cpp  shader.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
